[project]
name = "ap"
version = "0.1.0"
description = ""
authors = [
    {name = "Evan Prodromou",email = "evan@prodromou.name"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests-oauthlib (>=2.0.0,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "webfinger (>=1.0,<2.0)",
    "toml (>=0.10.2,<0.11.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ap = "ap.main:main"
